--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="cabec">
         <h2>COPA DO MUNDO 2022</h2>
-        <P class="disc">Acompanhe as etapas: FASE DE GRUPOS - OITAVAS DE FINAL - QUARTAS DE FINAL - SEMIFINAL - FINAL</P>
+        <P class="desc">Acompanhe as etapas: FASE DE GRUPOS - OITAVAS DE FINAL - QUARTAS DE FINAL - SEMIFINAL - FINAL</P>
         <img class="img-logo" src="img/logo-copa22.png" >
     </div>
     <div class="corpo">
